force-app/main/default/objects/Krow__Project_Notes__c/Krow__Project_Notes__c.object-meta.xml
<CustomObject>
    <label>Project Notes</label>
    <nameField>
        <displayFormat>PN-{0}</displayFormat>
        <label>Project Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>