force-app/main/default/objects/Krow__Project_Notes__c/fields/Krow__Body__c.field-meta.xml
<CustomField>
    <fullName>Krow__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>