force-app/main/default/objects/Krow__Project_Notes__c/fields/Krow__Internal__c.field-meta.xml
<CustomField>
    <fullName>Krow__Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>