force-app/main/default/objects/Krow__Project_Notes__c/fields/Krow__Private__c.field-meta.xml
<CustomField>
    <fullName>Krow__Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>