force-app/main/default/objects/Krow__Project_Notes__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klient Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Project Notes</relationshipLabel>
    <relationshipName>Project_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>